Finalizations and german translation

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -40,7 +40,7 @@ about.dialog.general_information=Allgemeine Information
 about.dialog.homepage=Homepage
 about.dialog.professional_folder_sharing_tool=Professionelle Dateisychronisation
 about.dialog.send_bug_report=Fehler melden
-##about.dialog.send_bug_report.key=B
+about.dialog.send_bug_report.key=F
 about.dialog.support=Support
 about.dialog.team=Team
 about.dialog.testers=Tester
@@ -51,11 +51,11 @@ about.dialog.version.buildtime=Build Zeit\: {0}
 about.dialog.version.text=Version\: {0}
 about.dialog.version.title=Version
 about.dialog.yoursystem.java_version=Java Version\: {0}
-##about.dialog.yoursystem.max=Max memory\: {0}MB
+about.dialog.yoursystem.max=Speicher (max)\: {0}MB
 about.dialog.yoursystem.os=OS\: {0}
 about.dialog.yoursystem.screen=Aufl\u00f6sung\: {0}x{1}
 about.dialog.yoursystem.title=Ihr System
-##about.dialog.yoursystem.used=Used memory\: {0}MB
+about.dialog.yoursystem.used=Speicher (benutzt)\: {0}MB
 about.dialog_about_tab=\u00fcber
 about.dialog_contributers_tab=team
 about.key=h
@@ -86,7 +86,7 @@ buypro.name=Pro kaufen
 
 chat.notification.option1=Antworten
 chat.notification.option2=Schliessen
-chat.notification.subtitle=<html><center><b>PowerFolder</b></center>Sie haben eine neue Nachricht</html>
+chat.notification.subtitle=<html><center><b>PowerFolder</b></center>Neue Nachricht erhalten</html>
 
 chatpanel.cannot_deliver=Die Nachricht konnte nicht zugestellt werden, da '{0}' nicht verbunden ist\!
 chatpanel.chat_with=Chat mit
@@ -99,9 +99,9 @@ chatpanel.member_left_folder_at_time={0} hat das Folder um {1} verlassen
 clearcompleteddownloads.key=c
 clearcompleteddownloads.name=Aufr\u00e4umen
 
-##clearrecentdownloads.description=Clears the list of the recent problems
-##clearrecentdownloads.key=c
-##clearrecentdownloads.name=Cleanup
+#clearrecentdownloads.description=Clears the list of the recent problems
+clearrecentdownloads.key=A
+clearrecentdownloads.name=Aufr\u00e4umen
 
 connect.description=Manuelle Verbindung zu einem Powerfolder Benutzer
 connect.dialog.text=Bitte geben Sie den Namen des Hosts oder die IP Adresse des Benutzers an, mit dem Sie verbunden werden m\u00f6chten.\n\nPowerFolder verbindet sich nach kurzer Zeit automatisch mit dem Netzwerk,\nbenutzen Sie diese Option wenn Sie sich manuell verbinden wollen.\n 
@@ -147,28 +147,28 @@ dialog.connection_problem=Verbindungsproblem
 dialog.customsync.autodownloadfromfriends=Autmatischer Download von Freunden
 dialog.customsync.autodownloadfromother=Automatischer Download von Anderen
 dialog.customsync.changedetection_disabled=\u00c4nderungen werden nicht erkannt
-##dialog.customsync.dailySync=Daily synchronization
-##dialog.customsync.everyDay=Every day
-##dialog.customsync.hourDaySync=Hour / day of synchronization
-##dialog.customsync.regularSync=Regular synchronization
+dialog.customsync.dailySync=Tägliches Synchronisieren
+dialog.customsync.everyDay=Jeden Tag
+dialog.customsync.hourDaySync=Stunde / Tag der Änderungssuche
+dialog.customsync.regularSync=Reguläre Synchronisation
 dialog.customsync.syncdeletionwithfriends=Dateil\u00f6schungen von Freunden \u00fcbernehmen
 dialog.customsync.syncdeletionwithothers=Dateil\u00f6schungen von Anderen \u00fcbernehmen
 dialog.customsync.syncprofilescombo=Standart Synchronizationsprofile
 dialog.customsync.text=W\u00e4hlen Sie ein Profil aus oder passen Sie es an 
-##dialog.customsync.timebetweenscans=(Maximum) time until change detection
+dialog.customsync.timebetweenscans=Zeit zwischen der Änderungssuche
 dialog.customsync.title=W\u00e4hlen Sie das Sync Profil
-##dialog.customsync.weekdays=Weekdays
-##dialog.customsync.weekends=Weekends
+dialog.customsync.weekdays=An den Arbeitstagen
+dialog.customsync.weekends=Am Wochenende
 dialog.directorychooser.new.description=Neues Verzeichnis
 dialog.directorychooser.new.exists={0}\nexistiert bereits
 dialog.directorychooser.new.key=N
 dialog.directorychooser.new.name=Neu
 dialog.directorychooser.new.problem=Problem w\u00e4hrend des Erstellens\:\n{0}
-##dialog.directorychooser.text=Select a directory from the list below, then click 'OK'.\nYou can expand directories by clicking on the anchors.
+dialog.directorychooser.text=Bitte wählen Sie ein Verzeichnis und klicken Sie 'OK'.\nVerzeichnisse können mit '+' aufgeklappt werden.
 dialog.directorychooser.title=Verzeichnis ausw\u00e4hlen
 dialog.fatalerror.title=Schwerer Fehler
 dialog.newdirectorycreator.text=Bitte geben Sie den Namen des Unterverzeichnis an\n{0}
-##dialog.newdirectorycreator.title=New directory
+dialog.newdirectorycreator.title=Neues Verzeichnis
 dialog.synchronization.choose=Bitte die Synchronisationoption ausw\u00e4hlen
 dialog.synchronization.receive_changes=\u00c4nderunge erhalten
 dialog.synchronization.send_and_receive_changes=\u00c4nderungen ver\u00f6ffentlichen und neue erhalten
@@ -188,15 +188,15 @@ dialog.updatecheck.nothingNeverAsk=Nicht mehr erinnern
 dialog.updatecheck.text=Eine neue Version von PowerFolder is verf\u00fcgbar \n\nIhre version\: v{0}\nAktuellste version\: v{1} (neuer)\n
 dialog.updatecheck.title=Update verf\u00fcgbar
 ##dialog.user_select.online_only=
-##dialog.user_select.text=Select users to invite. Hold down Ctrl key to select multiple users.
-##dialog.user_select.title=Select Users
+dialog.user_select.text=Wählen Sie die Benutzer aus. Strg halten für mehrfache Auswahl.
+dialog.user_select.title=Benutzer auswählen
 
 disablesilentmode.description=Ruhemodus derzeitig aktiv. Hinzugef\u00fcgte/ver\u00e4nderte Dateien werden nicht erkannt. Bitte anklicken, um wieder in den aktiven Modus zu wechseln.
 disablesilentmode.key=w
 disablesilentmode.name=Zum Aktivmodus
 
-##download_panel.auto_cleanup.description=Cleans up any downloads when they complete
-##download_panel.auto_cleanup.name=Auto-cleanup
+download_panel.auto_cleanup.description=Entfernt fertige Downloads automatisch
+download_panel.auto_cleanup.name=Auto-Aufräumen
 
 downloadfile.description=Markierte Dateien herunterladen
 downloadfile.failed.sourcenotfound=Kann {0} nicht herunterladen, keine Quellen gefunden
@@ -211,7 +211,7 @@ empty_recycle_bin.working.description=L\u00f6sche Datei(en)
 empty_recycle_bin.working.title=Papierkorb leeren
 
 ##empty_recycle_bin_confimation.dont=Do Not Empty
-##empty_recycle_bin_confimation.empty=Empty
+empty_recycle_bin_confimation.empty=Leeren
 ##empty_recycle_bin_confimation.text=PowerFolder Recycle Bin will be emptied.
 empty_recycle_bin_confimation.title=PowerFolder Papierkorb leeren
 
@@ -335,7 +335,7 @@ folderjoin.warning.notempty.text=Der von Ihnen angegebene Ort des Folders '{0}' 
 folderjoin.warning.notempty.title=Lokales Verzeichnis nicht leer
 
 folderleave.description=Folder verlassen (Stops sharing und downloading datai). 
-##folderleave.dialog.delete=Delete meta-data
+folderleave.dialog.delete=Meta-informationen löschen
 folderleave.dialog.sync_warning=Der Folder wird gerade synchronisiert\!
 folderleave.dialog.text=Wollen Sie den Folder {0} wirklich verlassen ?
 folderleave.dialog.title=Folder {0} verlassen ?
@@ -425,8 +425,8 @@ general.apply=\u00dcbernehmen
 general.availability=Verf\u00fcgbarkeit
 general.cancel=Abbrechen
 general.cancel.key=A
-##general.continue=Continue
-##general.continue.key=C
+general.continue=Weiter
+general.continue.key=W
 general.days={0} Tage
 general.description=Beschreibung
 general.directory=Verzeichnis
@@ -439,20 +439,20 @@ general.folder=Folder
 general.folder.public=\u00d6ffentlich (f\u00fcr jeden Benutzer sichtbar)
 general.folder.secret=Privat (ben\u00f6tigt eine Einladung)
 general.foldername=Name
-##general.friday=Friday
+general.friday=Freitag
 general.friendlist=Freunde
 general.from=von
 general.help=Hilfe
 general.hide=Verstecken
-##general.hours=Hour(s)
+general.hours=Stunden
 general.inet=Internet
 general.localcopyat=Lokaler Speicherort
 general.localcopyplace=W\u00e4hlen den lokalen Speicherort 
 general.localized_date_format=MMMM dd. yyyy
 general.localnet=LAN
 general.member=Benutzer
-##general.minutes=Minute(s)
-##general.monday=Monday
+general.minutes=Minuten
+general.monday=Montag
 general.notavailable=nicht verf\u00fcgbar
 general.notfound=nicht gefunden
 general.notonfriends=Benutzer finden
@@ -462,31 +462,31 @@ general.overwrite=\u00dcberschreiben
 general.overwrite_all=Alles \u00fcberschreiben
 general.powerfolder=PowerFolder
 general.recyclebin=Papierkorb 
-##general.saturday=Saturday
-##general.seconds=Second(s)
+general.saturday=Samstag
+general.seconds=Sekunden
 general.show=Anzeigen
 general.show_never_again=Nicht mehr anzeigen
-##general.show_never_again.key=D
+general.show_never_again.key=D
 general.size=Gr\u00f6\u00dfe
 general.skip=\u00dcberspringen
-##general.sunday=Sunday
+general.sunday=Sonntag
 general.synchonisation=Synchronisation
 general.syncprofile=Synchronisationsmodus
-##general.thursday=Thursday
+general.thursday=Donnerstag
 general.time=%02d\:%02d\:%02d
 general.today=Heute
-##general.tuesday=Tuesday
+general.tuesday=Dienstag
 general.uploads=Uploads
 general.user=Benutzer
 general.visibility=Modus
 general.webservice=Online Speicher
-##general.wednesday=Wednesday
+general.wednesday=Mittwoch
 general.whatisthis=Was ist das?
 general.yesterday=Gestern
 
 hideoffline.description=Es werden nur Benutzer angezeigt, die gerade online sind 
 hideoffline.key=O
-hideoffline.name=Nur Online Benutzer anzeigen
+hideoffline.name=Nur Benutzer anzeigen, die online sind
 
 ignorefile.description=Datei(en) von der Synchronisation ausschliessen
 ignorefile.key=I
@@ -528,13 +528,13 @@ linktoclipboard.name=PowerFolder link in die Zwischenablage
 
 loadinvitation.title=Treten Sie einem Folder \u00fcber eine Einladung bei
 
-##lowmemory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
-##lowmemory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
-##lowmemory.do_nothing=Do Nothing
-##lowmemory.dont_autodetect=Do not detect low memory
-##lowmemory.increase=Increase Memory
-##lowmemory.text=PowerFolder is running out of available memory.\n\nPowerFolder can attempt to increase the available memory.
-##lowmemory.title=Low memory
+lowmemory.configure_failure=PowerFolder konnten keine höheren Hauptspeicher-Einstellungen installieren.
+lowmemory.configure_success=Höhere Hauptspeicher-Einstellungen wurden installiert.\nPowerFolder muss neu gestartet werden, damit die Einstellungen aktiv werden.
+lowmemory.do_nothing=Ignorieren
+lowmemory.dont_autodetect=Hauptspeicher nicht mehr überprüfen
+lowmemory.increase=Einstellungen erhöhen
+lowmemory.text=PowerFolder steht nicht genügen Hauptspeicher zu Verfügung.\n\nPowerFolder kann die Hauptspeicher-Einstellungen erhöhen.
+lowmemory.title=Wenig Hauptspeicher
 
 masternode.nobody=- Niemand -
 
@@ -665,7 +665,7 @@ preferences.dialog.dialogs.check_for_program_updates=Nach PowerFolder Programmup
 preferences.dialog.dialogs.title=Dialoge
 preferences.dialog.dialogs.warnoncloseifnotinsync=Beim Schliessen warnen, wenn die Synchronisation noch nicht abgeschlossen ist
 preferences.dialog.dialogs.warnonlimitedconnectivity=Warnung eingeschr\u00e4nkter Konnektivit\u00e4t 
-##preferences.dialog.dialogs.warnonlowmemory=Warn on low available memory
+preferences.dialog.dialogs.warnonlowmemory=Warnen wenn wenig Hauptspeicher verfügbar ist
 preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warnung bei m\u00f6glichen Problem mit Dateinamen
 preferences.dialog.dyndns=Meine (dynamische) Adresse
 preferences.dialog.dyndns.title=DynDNS
@@ -712,9 +712,9 @@ preferences.dialog.plugin.status_enabled=Aktiv
 preferences.dialog.plugin.title=Pro Einstellungen
 preferences.dialog.randomPort=Automatisch einen Port finden
 preferences.dialog.randomPort.tooltip=PowerFolder sucht nach einem freien Netzwerk Port. 
-##preferences.dialog.restart.restart=Restart Now
-##preferences.dialog.restart.text=Some changes require PowerFolder to restart.
-##preferences.dialog.restart.title=Restart required
+preferences.dialog.restart.restart=Jetzt neu starten
+preferences.dialog.restart.text=PowerFolder muss neu gestartet werden.
+preferences.dialog.restart.title=Neustart benötigt
 preferences.dialog.showadvanced=Zeige erweiterte Einstellungen
 preferences.dialog.showpreviewpanel=Grafik Vorschau aktivieren
 ##preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My Folders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
@@ -886,9 +886,9 @@ sendinvitation.example_emailaddress=email@domain.de
 sendinvitation.folder.text=Einladung senden an
 sendinvitation.folder.title=Einladung senden
 sendinvitation.key=i
-##sendinvitation.multi_users=Multiple users selected
+sendinvitation.multi_users=Mehrer ausgewählt
 sendinvitation.name=Einladung versenden
-##sendinvitation.no_users=No users selected
+sendinvitation.no_users=Keine Auswahl
 sendinvitation.placetostore=W\u00e4hlen Sie den Ort, an dem Sie die Einladung speichern m\u00f6chten\:
 sendinvitation.subject=Einladung zum PowerFolder '{0}'
 sendinvitation.toclipboard=In die Zwischenablage...
@@ -1014,6 +1014,9 @@ unignorefile.name=Dateien wiedereinschliessen
 
 ##winutils.shortcut.description=This shortcut was placed here by PowerFolder
 
+wizard.backup_panel.folder_backup_success=Sie haben die automatische Sicherung\nerfolgreich eingerichtet\!
+wizard.backup_panel.pcsjoin=Andere Computer können nun dem Folder beitreten
+wizard.backup_panel.select=Bitte wählen Sie das Verzeichnis, daß gesichert werden soll.
 wizard.basicsetup.enternick=Bitte Nickname eingeben
 wizard.basicsetup.lanonly=Nur LAN
 wizard.basicsetup.networking=Verbindungen
@@ -1035,19 +1038,23 @@ wizard.control.next=Weiter >
 ##wizard.control.next.description=Go to next wizard step
 wizard.description=Offnet den Assistenten
 wizard.filesharing.sharedsuccess=Sie bieten nun erfolgreich ein neues Folder an\!\nAnderen PowerFolder Benutzern ist Ihr Folder nun zug\u00e4nglich.
+wizard.invite.selectlocaldirectory=Wählen Sie das lokale Verzeichnis aus
 wizard.key=a
 wizard.loadinvitation.addtofriends={0} der Freundeslisten hizuf\u00fcgen
-wizard.loadinvitation.choosefile=Einladung \u00f6ffnen
-wizard.loadinvitation.select=Einladung ausw\u00e4hlen
-wizard.loadinvitation.selectfile=Bitte w\u00e4hlen Sie eine Einladung aus
+wizard.loadinvitation.choosefile=Einladungs-Datei \u00f6ffnen
+wizard.loadinvitation.select=Einladung-Datei ausw\u00e4hlen
+wizard.loadinvitation.selectfile=Bitte w\u00e4hlen Sie eine Einladungs-Datei aus
 wizard.loadinvitation.title=Einladung \u00f6ffnen
 wizard.name=Assistent
 wizard.pfwizard.title=Assistent
+wizard.project_panel.folder_project_success=Die Projektsynchronisation wurde erfolgreich eingerichtet\!\n
+wizard.project_panel.select=Bitte wählen Sie das Verzeichnis mit den Projektdateien aus
 wizard.projectname.choose=Projektname w\u00e4hlen
 wizard.projectname.entername=Bitte geben Sie einen Namen f\u00fcr Ihr Projekt an
 wizard.projectname.title=Einladung \u00f6ffnen
 wizard.sendinvitations.invitationtext=Ihre Nachricht an den Empf\u00e4nger
 ##wizard.sendinvitations.invitationtextsample=
+##wizard.sendinvitations.join=Invitation files are required to join a folder.
 wizard.sendinvitations.neveruntrusted=<html>Geben Sie Einladungen nur an vertrauensw\u00fcrdige<br>Personen.</html>
 wizard.sendinvitations.offline=Nicht verbunden
 wizard.sendinvitations.overpf=\u00dcber PowerFolder versenden
@@ -1062,10 +1069,12 @@ wizard.setupdns.enterdns=Bitte geben Sie Ihre (dynamische) Internetadresse an
 wizard.setupdns.improvesread=<html>Eine (dynamische) Internetadresse (Dynamic DNS) verbessert Ihre<br>Erreichbarkeit. Unbedingt ben\u00f6tigt wird sie aber nicht.</html>
 wizard.setupdns.nodnssetup=<html>Sie haben bis jetzt noch keine (dynamische) Internetadresse<br>(Dynamic DNS) angegeben\!</html>
 wizard.setupdns.title=Dynamische Internetadresse einstellen
+wizard.setupdns.validate=Überprüfen
 wizard.setupsuccess=Setup erfolgreich
+wizard.successjoin=Der Folder wurde auf diesem Computer eingerichtet\!
 wizard.syncpcspanel.foldersyncsuccess=Computer Spiegelung wurde erfolgreich eingerichtet\!\n
 wizard.syncpcspanel.pcsjoin=Ihre Daten werden nun mit den anderen Computer(n) synchronisiert
-wizard.syncpcspanel.select=Bitte w\u00e4hlen Sie das Verzeichnis aus, welches gespiegelt werden soll
+wizard.syncpcspanel.select=Bitte w\u00e4hlen Sie das Verzeichnis aus, das gespiegelt werden soll
 wizard.webservice.enteraccount=Bitte geben Sie Ihre Daten zum Login in den Online Speicher an
 wizard.webservice.learnmore=Was ist der PowerFolder Online Speicher?
 wizard.webservice.login=Online Speicher Login
@@ -1074,6 +1083,10 @@ wizard.webservice.mirrorsetup=Folder auf Online Speicher sichern
 wizard.webservice.password=Passwort
 wizard.webservice.register=Neu registrieren
 wizard.webservice.username=Email
+wizard.whattodo.backup_folder=Verzeichnis sichern
+wizard.whattodo.custom_sync=Verzeichnis synchronisieren (erweitert)
+wizard.whattodo.load_invite=Einladungs-Datei öffnen
+wizard.whattodo.mirror_folder=Verzeichnis spiegeln
 wizard.whattodo.openonlinedocumentation=Online Dokumentation \u00f6ffnen
 wizard.whattodo.projectwork=Projekt Synchronisation
 wizard.whattodo.title=Was m\u00f6chten Sie tun?
