--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -350,7 +350,6 @@ folderpanel.filestab.dropfile_duplicate_dialog.skipall=Saltear Todos los Duplica
 folderpanel.filestab.dropfile_duplicate_dialog.text=Esta carpeta ya contiene un archivo '{0}' \u07e4esea sobreescribir el archivo existente?
 folderpanel.filestab.dropfile_duplicate_dialog.title=El Archivo ya existe
 folderpanel.hometab.choose_local_folder.title=Seleccione Archivo local
-folderpanel.hometab.confirm_local_folder_move.text=Local folder will be moved from\n{0}\nto\n{1}.
 folderpanel.hometab.confirm_local_folder_move.text=Carpeta local va a ser movida de \\n{0}haia\n{1}.
 folderpanel.hometab.confirm_local_folder_move.title=Confirmar movimiento
 folderpanel.hometab.folder_not_empty=Carpeta {0} no est\u00e1 vacia.
@@ -499,10 +498,6 @@ imagefileinfo.unknown=Desconocido
 infoside.title=Informaci\u00f3n
 
 invitationfiles.description=Invitaciones PowerFolder
-
-join_by_invitation.description=Unirse a Carpeta por Invitaci\u00f3n, Cargar Invitaci\u00f3n desde disco
-join_by_invitation.key=I
-join_by_invitation.name=Cargar Invitaci\u00f3n
 
 joinfolder.already_joined_text=Usted ya es miembro de la carpeta {0}
 joinfolder.already_joined_title=No se puede unir a {0}
@@ -870,7 +865,7 @@ restorefile.name=Restaurar archivo
 rootpanel.connected_users=Usuarios conectados
 rootpanel.friends=Amigos
 
-scanallfolders.description= Sincroniza todas las carpetas ahora (F5)
+scanallfolders.description=Sincroniza todas las carpetas ahora (F5)
 scanallfolders.key=F
 scanallfolders.name=Sincronizar Carpetas
 
@@ -1019,6 +1014,9 @@ user.dir.videos=Videos
 
 winutils.shortcut.description=Este atajo fue puesto por PowerFolder
 
+##wizard.backup_panel.folder_backup_success=You successfully set up a folder backup\!\n
+##wizard.backup_panel.pcsjoin=Other computers can join this folder now
+##wizard.backup_panel.select=Please select the directory which should be backed up
 wizard.basicsetup.enternick=Por favor ingrese su apodo
 wizard.basicsetup.lanonly=LAN solamente
 wizard.basicsetup.networking=Conectar a
@@ -1039,14 +1037,8 @@ wizard.control.help.description=Mostrar ayuda en linea (Alt-8)
 wizard.control.next=Siguiente >
 wizard.control.next.description=Ir al siguiente paso del Asistente
 wizard.description=Abrir Asistente
-wizard.filesharing.browse=Navegar en Carpetas P\u00fablicas
-wizard.filesharing.browseinfo=Para consultar las carpetas p\u00fablicas (en gris),\nuse el \u00e1rbol de navegaci\u00f3n a la izda.\nSus archivos se mostrar\u00e1n a la derecha.
-wizard.filesharing.folderjoinsuccess=Se uni\u00f3 con exito a la carpeta
-wizard.filesharing.loadinvitation=Unirse a Carpeta por Invitaci\u00f3n
-wizard.filesharing.selecttarget=Por favor elija el directorio de descarga
-wizard.filesharing.share=Compartir/Abrir una nueva carpeta
 wizard.filesharing.sharedsuccess=\u00a1Ha compartido con \u00e9xito una nueva carpeta\!\nAhora otros usuarios pueden unirse
-wizard.filesharing.title=Compartir archivos
+##wizard.invite.selectlocaldirectory=Please select local target directory for the files
 wizard.key=w
 wizard.loadinvitation.addtofriends=Agregar {0} a amigos
 wizard.loadinvitation.choosefile=Elija el archivo invitaci\u00f3n
@@ -1055,20 +1047,14 @@ wizard.loadinvitation.selectfile=Por favor, seleccione el archivo invitaci\u00f3
 wizard.loadinvitation.title=Abrir invitaci\u00f3n
 wizard.name=Asistente
 wizard.pfwizard.title=Asistente
+##wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
+##wizard.project_panel.select=Please select the project directory
 wizard.projectname.choose=Elija el nombre del proyecto
 wizard.projectname.entername=Teclee el nombre de su proyecto
 wizard.projectname.title=Abrir invitaci\u00f3n
-wizard.projectsync.projectsyncsuccess=\u00a1Ha configurado con \u00e9xito un proyecto sincronizado\!\nAhora pueden unirse otros miembros del proyecto
-wizard.projectsync.selectdirectory=Por favor, seleccione el directorio donde est\u00e1 ubicado sus archivos del proyecto
-wizard.projectsync.selectlocaldirectory=Por favor, seleccione el directorio local para los archivos del proyecto
-wizard.projectsync.setupsync=Configurar un proyecto sincronizado
-wizard.projectsync.successjoin=\u00a1Se ha unido con \u00e9xito al proyecto\!
-wizard.projectsync.takepartsync=Tome parte en una sincronizaci\u00f3n
-wizard.projectsync.title=Proyecto sincronizado
-wizard.sendinvitations.additionaltext=Informaci\u00f3n adicional
 wizard.sendinvitations.invitationtext=Enter a message for the receiver
 wizard.sendinvitations.invitationtextsample=Texto ejemplo de invitaci\u00f3n
-wizard.sendinvitations.joinsync=Archivos de invitaci\u00f3n se reqieren para inscribirse a una carpeta espejo.
+##wizard.sendinvitations.join=Invitation files are required to join a folder.
 wizard.sendinvitations.neveruntrusted=Nunca entrege archivos invitaci\u00f3n a personas en los que no conf\u00eda
 wizard.sendinvitations.offline=No conectado
 wizard.sendinvitations.overpf=Via PowerFolder ahora
@@ -1083,15 +1069,12 @@ wizard.setupdns.enterdns=Teclee su dns (din\u00e1mica)
 wizard.setupdns.improvesread=Esto mejora su localizaci\u00f3n en la red. Aunque no es necesario
 wizard.setupdns.nodnssetup=\u00a1A\u00fan no ha configfurado una dns (din\u00e1mica)\!
 wizard.setupdns.title=Configurar dns (din\u00e1mica)
+##wizard.setupdns.validate=Validate 
 wizard.setupsuccess=Ajustes realizados con \u00e9xito
-wizard.syncpcspanel.folderjoinsuccess=Has sido inscrito exitosamente a una carpeta espejo\!\n
+##wizard.successjoin=You have successfully joined the folder\!
 wizard.syncpcspanel.foldersyncsuccess=Has instalado exitosamente una carpeta espejo\!\n
 wizard.syncpcspanel.pcsjoin=Est\u00e1 listo para unir m\u00e1s PC en esta carpeta
 wizard.syncpcspanel.select=Favor de seleccionar el dirctorio que se desea ser reflejado
-wizard.syncpcspanel.selecttarget=Por favor, seleccione el direcctorio local
-wizard.syncpcspanel.setup=Instalar un nuevo espejo
-wizard.syncpcspanel.takepart=Tomar parte en un espejo
-wizard.syncpcspanel.title=Espejo
 wizard.webservice.enteraccount=Favor de teclear la cuenta para accesar el almac\u00e9n en linea
 wizard.webservice.learnmore=\u00bfQue es el almac\u00e9n en linea de PowerFolder?
 wizard.webservice.login=Clave de almacen en linea
@@ -1100,9 +1083,10 @@ wizard.webservice.mirrorsetup=Respaldar la Carpeta con el almac\u00e9n en linea
 wizard.webservice.password=Contrase\u00f1a
 wizard.webservice.register=Registra cuenta nueva
 wizard.webservice.username=Correo electr\u00f3nico
-wizard.whattodo.bordertext=Elija su acci\u00f3n
-wizard.whattodo.filesharing=Compartir archivos
+##wizard.whattodo.backup_folder=Backup a folder
+##wizard.whattodo.custom_sync=Share a folder (customized)
+##wizard.whattodo.load_invite=Open invitation file
+##wizard.whattodo.mirror_folder=Mirror a folder
 wizard.whattodo.openonlinedocumentation=Abrir Documentaci\u00f3n En-L\u00ednea
 wizard.whattodo.projectwork=Sincronizar un proyecto
-wizard.whattodo.syncpcs=Espejo
 wizard.whattodo.title=\u00bfQu\u00e9 desea hacer?
