--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -499,10 +499,6 @@ infoside.title=Information
 
 invitationfiles.description=Invitations PowerFolder
 
-join_by_invitation.description=Se connecter \u00e0 un dossier via un fichier d'Invitation, charger un fichier d'Invitation
-join_by_invitation.key=I
-join_by_invitation.name=Invitation
-
 joinfolder.already_joined_text=Vous \u00eates d\u00e9j\u00e0 membre du dossier {0}
 joinfolder.already_joined_title=Impossible de rejoindre le dossier {0}
 
@@ -1018,6 +1014,9 @@ unignorefile.name=Retirer de 'Ignor\u00e9s'
 
 winutils.shortcut.description=Raccourci cr\u00e9\u00e9 par PowerFolder
 
+##wizard.backup_panel.folder_backup_success=You successfully set up a folder backup\!\n
+##wizard.backup_panel.pcsjoin=Other computers can join this folder now
+##wizard.backup_panel.select=Please select the directory which should be backed up
 wizard.basicsetup.enternick=Merci de saisir votre login Windows
 wizard.basicsetup.lanonly=R\u00e9seau local LAN
 wizard.basicsetup.networking=Connect\u00c3\u00a9(e) \u00c3\u00a0)
@@ -1038,13 +1037,8 @@ wizard.control.help=Aide
 wizard.control.next=Suivant >
 ##wizard.control.next.description=Go to next wizard step
 wizard.description=Ouverture de l'assistant
-wizard.filesharing.browse=Passer en revue les dossiers publics
-wizard.filesharing.browseinfo=Pour passer en revue les dossiers publics (gris),\nutiliser l'arborescence figurant c\u00f4t\u00e9 gauche.\nLeurs fichiers sont affich\u00e9s sur la partie droite de la fen\u00eatre
-wizard.filesharing.folderjoinsuccess=Vous \u00eates connect\u00e9s au dossier partag\u00e9
-wizard.filesharing.loadinvitation=Se connecter \u00e0 un dossier via une invitation
-wizard.filesharing.selecttarget=Merci d'indiquer votre r\u00e9pertoire de t\u00e9l\u00e9chargement
-wizard.filesharing.share=Partager/Ouvrir un nouveau dossier
 wizard.filesharing.sharedsuccess=Vous venez de partager un nouveau dossier \!\nD'autres utilisateurs peuvent maintenant s'y connecter
+##wizard.invite.selectlocaldirectory=Please select local target directory for the files
 wizard.key=A
 wizard.loadinvitation.addtofriends=Ajouter {0} \u00e0 la liste d'ami(e)s
 wizard.loadinvitation.choosefile=Indiquer le fichier d'invitation
@@ -1053,20 +1047,14 @@ wizard.loadinvitation.selectfile=Merci de s\u00e9lectionner le fichier d'invitat
 wizard.loadinvitation.title=Charger l'invitation
 wizard.name=Assistant
 wizard.pfwizard.title=Assistant
+##wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
+##wizard.project_panel.select=Please select the project directory
 wizard.projectname.choose=Choisir le nom du projet
 wizard.projectname.entername=Saisir le nom de votre projet
 wizard.projectname.title=Charger une invitation
-wizard.projectsync.projectsyncsuccess=Vous venez de configurer une synchronisation de type Projet\!\nD'autres membres du project peuvent maintenant vous rejoindre
-wizard.projectsync.selectdirectory=Merci de s\u00e9lectionner le r\u00e9pertoire contenant les fichiers de project
-wizard.projectsync.selectlocaldirectory=Merci de s\u00e9lectionner le r\u00e9pertoire local cible pour les fichiers de project
-wizard.projectsync.setupsync=Configurer une synchronisation de type Projet
-wizard.projectsync.successjoin=Vous venez de rejoindre le Projet\!
-wizard.projectsync.takepartsync=Prendre part \u00e0 une synchronisation de type Projet
-wizard.projectsync.title=Synchronisation de type Projet
-wizard.sendinvitations.additionaltext=Informations compl\u00e9mentaires
 wizard.sendinvitations.invitationtext=Saisir un message pour le destinataire
 ##wizard.sendinvitations.invitationtextsample=
-wizard.sendinvitations.joinsync=Une invitation est n\u00e9cessaire pour joindre un dossier dupliqu\u00e9.
+##wizard.sendinvitations.join=Invitation files are required to join a folder.
 wizard.sendinvitations.neveruntrusted=\nNe le diffusez jamais aupr\u00e8s d'inconnu(e)s
 wizard.sendinvitations.offline=D\u00e9connect\u00e9e
 wizard.sendinvitations.overpf=Instantan\u00e9ment via PowerFolder
@@ -1081,15 +1069,12 @@ wizard.setupdns.enterdns=Indiquer votre adresse (dynamique) DNS ou cliquer sur '
 wizard.setupdns.improvesread=Ceci am\u00e9liore la qualit\u00e9 de votre connectivit\u00e9 aupr\u00e8s des autres.
 wizard.setupdns.nodnssetup=Vous n'avez pas encore configur\u00e9 d'adresse (dynamique) DNS\!
 wizard.setupdns.title=Configuration facultative du (dynamic) DNS
+##wizard.setupdns.validate=Validate 
 wizard.setupsuccess=Configuration termin\u00e9e avec succ\u00e8s
-wizard.syncpcspanel.folderjoinsuccess=Vous venez de rejoindre un dossier dupliqu\u00e9 \!\n
+##wizard.successjoin=You have successfully joined the folder\!
 wizard.syncpcspanel.foldersyncsuccess=Vous venez de configurer un dossier dupliqu\u00e9 \!\n
 wizard.syncpcspanel.pcsjoin=D'autres PCs peuvent se connecter au dossier maintenant
 wizard.syncpcspanel.select=Merci d'indiquer le r\u00e9pertoire devant \u00c3\u00aatre dupliqu\u00e9
-wizard.syncpcspanel.selecttarget=Merci d'indiquer le r\u00e9pertoire local cible
-wizard.syncpcspanel.setup=Configurer un nouveau dossier de duplication
-wizard.syncpcspanel.takepart=Prendre part \u00e0 une duplication
-wizard.syncpcspanel.title=Duplication
 wizard.webservice.enteraccount=Merci de saisir vos identifiants pour vous connecter \u00e0 l'espace de stockage en ligne
 wizard.webservice.learnmore=Qu'est-ce que l'espace de stockage en ligne de PowerFolder ?
 wizard.webservice.login=Identifiant de sauvegarde en ligne
@@ -1098,6 +1083,10 @@ wizard.webservice.mirrorsetup=Sauvegarde de dossier en ligne
 wizard.webservice.password=Mot de passe
 wizard.webservice.register=Cr\u00e9er un nouveau compte
 wizard.webservice.username=E-mail
+##wizard.whattodo.backup_folder=Backup a folder
+##wizard.whattodo.custom_sync=Share a folder (customized)
+##wizard.whattodo.load_invite=Open invitation file
+##wizard.whattodo.mirror_folder=Mirror a folder
 wizard.whattodo.openonlinedocumentation=Ouvrir la documentation en ligne
 wizard.whattodo.projectwork=Synchroniser un projet
 wizard.whattodo.title=Que voulez-vous faire ?
