--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -1014,6 +1014,9 @@ unignorefile.name=Verwijder uit uitzonderingslijst
 
 winutils.shortcut.description=Deze snelkoppeling werd geplaatst door PowerFolder
 
+##wizard.backup_panel.folder_backup_success=You successfully set up a folder backup\!\n
+##wizard.backup_panel.pcsjoin=Other computers can join this folder now
+##wizard.backup_panel.select=Please select the directory which should be backed up
 wizard.basicsetup.enternick=Voer gebruikersnaam in
 wizard.basicsetup.lanonly=Alleen LAN
 wizard.basicsetup.networking=Verbind met
@@ -1035,6 +1038,7 @@ wizard.control.next=Volgende >
 ##wizard.control.next.description=Go to next wizard step
 wizard.description=Opent wizard
 wizard.filesharing.sharedsuccess=Folder wordt nu gedeeld\!\nAndere gebruikers kunnen nu lid worden
+##wizard.invite.selectlocaldirectory=Please select local target directory for the files
 wizard.key=w
 wizard.loadinvitation.addtofriends=Voeg {0} toe aan vrienden
 wizard.loadinvitation.choosefile=Kies een invitatie bestand
@@ -1043,11 +1047,14 @@ wizard.loadinvitation.selectfile=Selecteer een invitatie bestand
 wizard.loadinvitation.title=Open een invitatie
 wizard.name=Wizard
 wizard.pfwizard.title=Wizard
+##wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
+##wizard.project_panel.select=Please select the project directory
 wizard.projectname.choose=Kies project naam
 wizard.projectname.entername=Vul de naam van uw project in
 wizard.projectname.title=Open invitatie
 ##wizard.sendinvitations.invitationtext=Enter a message for the receiver
 ##wizard.sendinvitations.invitationtextsample=
+##wizard.sendinvitations.join=Invitation files are required to join a folder.
 wizard.sendinvitations.neveruntrusted=Geef invitatie bestanden nooit aan personen die u niet vertrouwd
 wizard.sendinvitations.offline=Niet verbonden
 wizard.sendinvitations.overpf=Via PowerFolder Nu
@@ -1062,7 +1069,9 @@ wizard.setupdns.enterdns=Vult uw (dynamic) dns in
 wizard.setupdns.improvesread=Dit bevorderd uw bereikbaarheid als een een dynamisch IP adres heeft (echter niet vereist), dit is niet nodig als u een vast IP adres heeft
 wizard.setupdns.nodnssetup=U heeft nog geen (dynamic) dns adres\!
 wizard.setupdns.title=Setup (dynamic) dns
+##wizard.setupdns.validate=Validate 
 wizard.setupsuccess=Setup success
+##wizard.successjoin=You have successfully joined the folder\!
 wizard.syncpcspanel.foldersyncsuccess=U heeft succesvol een "exacte kopie" van een folder op gezet\!\n
 wizard.syncpcspanel.pcsjoin=U kunt nu meerdere PCs lid maken van deze folder
 wizard.syncpcspanel.select=Selecteer de map waarvan een "exacte kopie" gemaakt moet worden
@@ -1074,6 +1083,10 @@ wizard.webservice.login=Online Opslag Inloggen
 wizard.webservice.password=Wachtwoord
 wizard.webservice.register=Registreer een nieuw account  
 wizard.webservice.username=E-mail
+##wizard.whattodo.backup_folder=Backup a folder
+##wizard.whattodo.custom_sync=Share a folder (customized)
+##wizard.whattodo.load_invite=Open invitation file
+##wizard.whattodo.mirror_folder=Mirror a folder
 wizard.whattodo.openonlinedocumentation=Open Documentatie op internet
 wizard.whattodo.projectwork=Project synchroniseren
 wizard.whattodo.title=Wat wilt u doen?
