--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -499,10 +499,6 @@ infoside.title=Informacje
 
 invitationfiles.description=Zaproszenia PowerFolder
 
-join_by_invitation.description=Przy\u0142\u0105cz si\u0119 do folderu poprzez Zaproszenie, wczytaj Zaproszenie z dysku
-join_by_invitation.key=I
-join_by_invitation.name=Zaproszenie
-
 joinfolder.already_joined_text=Jeste\u015b ju\u017c cz\u0142onkiem folderu {0}
 joinfolder.already_joined_title=Nie mo\u017cna si\u0119 przy\u0142\u0105czy\u0107 do {0}
 
@@ -1018,6 +1014,9 @@ unignorefile.name=Usu\u0144 z Ignorowanych
 
 winutils.shortcut.description=Ten skr\u00f3t zosta\u0142 umieszczony tutaj przez PowerFolder
 
+##wizard.backup_panel.folder_backup_success=You successfully set up a folder backup\!\n
+##wizard.backup_panel.pcsjoin=Other computers can join this folder now
+##wizard.backup_panel.select=Please select the directory which should be backed up
 wizard.basicsetup.enternick=Wprowad\u017a swoj\u0105 nazw\u0119 (nick)
 wizard.basicsetup.lanonly=Tylko LAN
 wizard.basicsetup.networking=Po\u0142\u0105cz z
@@ -1038,14 +1037,8 @@ wizard.control.help=Pomoc
 wizard.control.next=Dalej >
 ##wizard.control.next.description=Go to next wizard step
 wizard.description=Otwiera kreatora
-wizard.filesharing.browse=Przegl\u0105daj publiczne foldery
-wizard.filesharing.browseinfo=Aby przegl\u0105da\u0107 publiczne foldery (szare),\nu\u017cyj drzewa nawigacyjnego po lewej stronie.\nIch zawarto\u015b\u0107 jest wy\u015bwietlana po prawej stronie
-wizard.filesharing.folderjoinsuccess=Pomy\u015blnie przy\u0142\u0105czono si\u0119 do folderu
-wizard.filesharing.loadinvitation=Przy\u0142\u0105cz si\u0119 do folderu poprzez Zaproszenie
-wizard.filesharing.selecttarget=Wybierz katalog docelowy
-wizard.filesharing.share=Udost\u0119pnij nowy folder
 wizard.filesharing.sharedsuccess=Pomy\u015blnie skonfigurowano folder wsp\u00f3\u0142dzielony\!\nInni u\u017cytkownicy mog\u0105 si\u0119 teraz przy\u0142\u0105czy\u0107
-wizard.filesharing.title=Udost\u0119pnianie plik\u00f3w
+##wizard.invite.selectlocaldirectory=Please select local target directory for the files
 wizard.key=w
 wizard.loadinvitation.addtofriends=Dodano {0} do znajomych
 wizard.loadinvitation.choosefile=Wybierz plik zaproszenia
@@ -1054,20 +1047,14 @@ wizard.loadinvitation.selectfile=Prosz\u0119 wybra\u0107 plik zaproszenia
 wizard.loadinvitation.title=Wczytaj zaproszenie
 wizard.name=Kreator
 wizard.pfwizard.title=Kreator
+##wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
+##wizard.project_panel.select=Please select the project directory
 wizard.projectname.choose=Wybierz nazw\u0119 projektu
 wizard.projectname.entername=Wpisz nazw\u0119 Twojego projektu
 wizard.projectname.title=Wczytaj zaproszenie
-wizard.projectsync.projectsyncsuccess=Pomy\u015blnie skonfigurowano synchronizaj\u0119 projektu\!\nInni cz\u0142onkowie projektu mog\u0105 si\u0119 teraz przy\u0142\u0105czy\u0107
-wizard.projectsync.selectdirectory=Wybierz folder, w kt\u00f3rym znajduj\u0105 si\u0119 pliki Twojego projektu
-wizard.projectsync.selectlocaldirectory=Wybierz lokalny folder docelowy dla plik\u00f3w projektu
-wizard.projectsync.setupsync=Konfiguruj synchronizacj\u0119 projektu
-wizard.projectsync.successjoin=Przy\u0142\u0105czenie do projektu zako\u0144czone pomy\u015blnie\!
-wizard.projectsync.takepartsync=Przy\u0142\u0105cz si\u0119 do synchronizowanego projektu
-wizard.projectsync.title=Synchronizacja projektu
-wizard.sendinvitations.additionaltext=Dodatkowe informacje
 wizard.sendinvitations.invitationtext=Wiadomo\u015b\u0107 dla odbiorcy
 wizard.sendinvitations.invitationtextsample=Wiadomo\u015b\u0107 dla odbiorcy zaproszenia...
-wizard.sendinvitations.joinsync=Pliki zaprosze\u0144 s\u0105 konieczne, aby przy\u0142\u0105czy\u0107 si\u0119 do folderu lustrzanego.
+##wizard.sendinvitations.join=Invitation files are required to join a folder.
 wizard.sendinvitations.neveruntrusted=Nigdy nie dawaj swoich plik\u00f3w zaprosze\u0144 niezaufanym osobom.
 wizard.sendinvitations.offline=Nie po\u0142\u0105czony
 wizard.sendinvitations.overpf=Przez PowerFolder
@@ -1082,15 +1069,12 @@ wizard.setupdns.enterdns=Wprowad\u017a sw\u00f3j (dynamiczny) dns
 wizard.setupdns.improvesread=Zwi\u0119ksza Twoj\u0105 osi\u0105galno\u015b\u0107. Nie jest jednak konieczne.
 wizard.setupdns.nodnssetup=Nie zosta\u0142 jeszcze skonfigurowany (dynamiczny) dns\!
 wizard.setupdns.title=Konfiguruj (dynamiczny) dns
+##wizard.setupdns.validate=Validate 
 wizard.setupsuccess=Konfiguracja zako\u0144czona pomy\u015blnie
-wizard.syncpcspanel.folderjoinsuccess=Pomy\u015blnie przy\u0142\u0105czono si\u0119 do folderu lustrzanego\!\n
+##wizard.successjoin=You have successfully joined the folder\!
 wizard.syncpcspanel.foldersyncsuccess=Pomy\u015blnie skonfigurowano folder lustrzany\!\n
 wizard.syncpcspanel.pcsjoin=Inne komputery mog\u0105 si\u0119 teraz przy\u0142\u0105czy\u0107
 wizard.syncpcspanel.select=Wybierz folder, kt\u00f3ry ma by\u0107 lustrzany
-wizard.syncpcspanel.selecttarget=Wybierz lokalny folder docelowy
-wizard.syncpcspanel.setup=Stw\u00f3rz nowy folder lustrzany
-wizard.syncpcspanel.takepart=Przy\u0142\u0105cz si\u0119 do lustrzanego folderu
-wizard.syncpcspanel.title=Folder lustrzany
 wizard.webservice.enteraccount=Wprowad\u017a dane Twojego konta, aby zalogowa\u0107 si\u0119 do Archiwum Online
 wizard.webservice.learnmore=Co to jest Archiwum Online PowerFolder?
 wizard.webservice.login=Logowanie do Archiwum Online
@@ -1099,8 +1083,10 @@ wizard.webservice.mirrorsetup=Stw\u00f3rz kopi\u0119 zapasow\u0105 z Archiwum On
 wizard.webservice.password=Has\u0142o
 wizard.webservice.register=Zarejestruj Nowe Konto
 wizard.webservice.username=Email
-wizard.whattodo.bordertext=Wybierz
-wizard.whattodo.filesharing=Udost\u0119pnianie Plik\u00f3w
+##wizard.whattodo.backup_folder=Backup a folder
+##wizard.whattodo.custom_sync=Share a folder (customized)
+##wizard.whattodo.load_invite=Open invitation file
+##wizard.whattodo.mirror_folder=Mirror a folder
 wizard.whattodo.openonlinedocumentation=Otw\u00f3rz Dokumentacj\u0119 Online
 wizard.whattodo.projectwork=Synchronizacja Projektu
 wizard.whattodo.title=Co chcesz zrobi\u0107?
