--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -1014,6 +1014,9 @@ unignorefile.name=Avbryt att ignorera
 
 ##winutils.shortcut.description=This shortcut was placed here by PowerFolder
 
+##wizard.backup_panel.folder_backup_success=You successfully set up a folder backup\!\n
+##wizard.backup_panel.pcsjoin=Other computers can join this folder now
+##wizard.backup_panel.select=Please select the directory which should be backed up
 wizard.basicsetup.enternick=V\u00e4nligen ange ditt smeknamn
 wizard.basicsetup.lanonly=endast LAN
 wizard.basicsetup.networking=Anslut till
@@ -1035,6 +1038,7 @@ wizard.control.next=N\u00e4sta >
 ##wizard.control.next.description=Go to next wizard step
 wizard.description=\u00d6ppnar assistenten
 wizard.filesharing.sharedsuccess=Du lyckades dela en ny folder\!\nAndtra anv\u00e4ndare kan g\u00e5 med nu
+##wizard.invite.selectlocaldirectory=Please select local target directory for the files
 wizard.key=a
 wizard.loadinvitation.addtofriends=L\u00e4gg till {0} till v\u00e4nner
 wizard.loadinvitation.choosefile=Val av inbjudningsfil
@@ -1043,11 +1047,14 @@ wizard.loadinvitation.selectfile=Var v\u00e4nlig v\u00e4lj inbjudningsfil
 wizard.loadinvitation.title=Ladda inbjudan
 wizard.name=Assistenten
 wizard.pfwizard.title=Assistenten
+##wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
+##wizard.project_panel.select=Please select the project directory
 wizard.projectname.choose=V\u00e4lj projekt namn
 wizard.projectname.entername=Mata in namnet p\u00e5 ditt projekt
 wizard.projectname.title=Ladda inbjudan
 ##wizard.sendinvitations.invitationtext=Enter a message for the receiver
 ##wizard.sendinvitations.invitationtextsample=
+##wizard.sendinvitations.join=Invitation files are required to join a folder.
 wizard.sendinvitations.neveruntrusted=Ge aldrig ut inbjudningsfiler till n\u00e5gon du inte litar p\u00e5.
 wizard.sendinvitations.offline=Ej ansluten
 wizard.sendinvitations.overpf=Via PowerFolder nu
@@ -1062,7 +1069,9 @@ wizard.setupdns.enterdns=Ange din (dynamiska) DNS
 wizard.setupdns.improvesread=Det g\u00f6r det l\u00e4ttare att n\u00e5 dig. Men det \u00e4r inget som kr\u00e4vs
 wizard.setupdns.nodnssetup=Du har inte satt upp n\u00e5gon (dynamisk) DNS adress \u00e4nnu\!
 wizard.setupdns.title=S\u00e4tt upp (dynamisk) DNS
+##wizard.setupdns.validate=Validate 
 wizard.setupsuccess=Inst\u00e4llningarna lyckades
+##wizard.successjoin=You have successfully joined the folder\!
 ##wizard.syncpcspanel.foldersyncsuccess=You successfully set up a folder mirror\!\n
 wizard.syncpcspanel.pcsjoin=Andra datorer kan g\u00e5 med i denna folder nu
 ##wizard.syncpcspanel.select=Please select the directory which should be mirrored
@@ -1074,6 +1083,10 @@ wizard.syncpcspanel.pcsjoin=Andra datorer kan g\u00e5 med i denna folder nu
 ##wizard.webservice.password=Password
 ##wizard.webservice.register=Register New Account
 ##wizard.webservice.username=Email
+##wizard.whattodo.backup_folder=Backup a folder
+##wizard.whattodo.custom_sync=Share a folder (customized)
+##wizard.whattodo.load_invite=Open invitation file
+##wizard.whattodo.mirror_folder=Mirror a folder
 wizard.whattodo.openonlinedocumentation=\u00d6ppna online dokumentation
 wizard.whattodo.projectwork=Synkronisera projekt
 wizard.whattodo.title=Vad vill du g\u00f6ra ?
