--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -499,10 +499,6 @@ infoside.title=\u0645\u0639\u0644\u0648\u0645\u0627\u062a
 
 invitationfiles.description=PowerFolder \u062f\u0639\u0648\u0627\u062a
 
-join_by_invitation.description=\u0627\u0646\u0636\u0645 \u0625\u0644\u0649 \u0645\u062c\u0644\u062f \u0639\u0646 \u0637\u0631\u064a\u0642 \u0627\u0644\u062f\u0639\u0648\u0629 , \u062d\u0645\u0644 \u0627\u0644\u062f\u0639\u0648\u0629 \u0645\u0646 \u0627\u0644\u0642\u0631\u0635
-join_by_invitation.key=\u0627
-join_by_invitation.name=\u062d\u0645\u0644 \u0627\u0644\u062f\u0639\u0648\u0629
-
 joinfolder.already_joined_text=\u0623\u0646\u062a \u062d\u0627\u0644\u064a\u0627 \u0639\u0636\u0648 \u0641\u064a \u0627\u0644\u0645\u062c\u0644\u062f  {0}
 joinfolder.already_joined_title=\u063a\u064a\u0631 \u0642\u0627\u062f\u0631 \u0639\u0644\u0649 \u0627\u0644\u0627\u0646\u0636\u0645\u0627\u0645 {0}
 
@@ -1018,6 +1014,9 @@ unignorefile.name=\u0625\u0632\u0627\u0644\u0629 \u0645\u0646 \u0627\u0644\u062a
 
 winutils.shortcut.description=\u0647\u0630\u0627 \u0627\u0644\u0627\u062e\u062a\u0635\u0627\u0631 \u0648\u0636\u0639 \u0647\u0646\u0627 \u0628\u0648\u0627\u0633\u0637\u0629 PowerFolder
 
+##wizard.backup_panel.folder_backup_success=You successfully set up a folder backup\!\n
+##wizard.backup_panel.pcsjoin=Other computers can join this folder now
+##wizard.backup_panel.select=Please select the directory which should be backed up
 wizard.basicsetup.enternick=\u0627\u0644\u0631\u062c\u0627\u0621 \u0625\u062f\u062e\u0627\u0644 \u0627\u0633\u0645\u0643 \u0627\u0644\u0645\u0633\u062a\u0639\u0627\u0631
 wizard.basicsetup.lanonly=\u0634\u0628\u0643\u0629 \u0641\u0642\u0637
 wizard.basicsetup.networking=\u0627\u062a\u0635\u0644 \u0628
@@ -1038,14 +1037,8 @@ wizard.control.help=\u0627\u0644\u0645\u0633\u0627\u0639\u062f\u0629
 wizard.control.next=\u0627\u0644\u062a\u0627\u0644\u064a >
 ##wizard.control.next.description=Go to next wizard step
 wizard.description=\u0641\u062a\u062d \u0645\u0639\u0627\u0644\u062c \u0627\u0644\u062a\u0643\u0648\u064a\u0646
-wizard.filesharing.browse=\u0627\u0633\u062a\u0639\u0631\u0627\u0636 \u0645\u062c\u0644\u062f\u0627\u062a \u0639\u0627\u0645\u0629
-wizard.filesharing.browseinfo=\u0644\u0627\u0633\u062a\u0639\u0631\u0627\u0636 \u0627\u0644\u0645\u062c\u0644\u062f\u0627\u062a \u0627\u0644\u0639\u0627\u0645\u0629  (\u0631\u0645\u0627\u062f\u064a),\n\u0627\u0633\u062a\u062e\u062f\u0645 \u0634\u062c\u0631\u0629 \u0627\u0644\u0645\u0644\u0627\u062d\u0629 \u0639\u0644\u0649 \u0627\u0644\u062c\u0627\u0646\u0628 \u0627\u0644\u0623\u064a\u0633\u0631.\n\u0627\u0644\u0645\u0644\u0641\u0627\u062a \u062a\u0638\u0647\u0631 \u0639\u0644\u0649 \u0627\u0644\u062c\u0627\u0646\u0628 \u0627\u0644\u0623\u064a\u0645\u0646
-wizard.filesharing.folderjoinsuccess=\u0644\u0642\u062f \u0642\u0645\u062a \u0628\u0646\u062c\u0627\u062d \u0628\u0627\u0644\u0627\u0646\u0636\u0645\u0627\u0645 \u0627\u0644\u0649 \u0645\u062c\u0644\u062f
-wizard.filesharing.loadinvitation=\u0627\u0644\u0627\u0646\u0636\u0645\u0627\u0645 \u0627\u0644\u0649 \u0645\u062c\u0644\u062f \u0639\u0646 \u0637\u0631\u064a\u0642 \u0627\u0644\u062f\u0639\u0648\u0629
-wizard.filesharing.selecttarget=\u0627\u0644\u0631\u062c\u0627\u0621 \u0627\u062e\u062a\u064a\u0627\u0631 \u0645\u0633\u0627\u0631 \u0627\u0644\u062a\u062d\u0645\u064a\u0644
-wizard.filesharing.share=\u0645\u0634\u0627\u0631\u0643\u0629/\u0627\u0641\u062a\u062d \u0645\u0644\u0641\u0627 \u062c\u062f\u064a\u062f\u0627
 wizard.filesharing.sharedsuccess=\u0644\u0642\u062f \u0642\u0645\u062a \u0628\u0646\u062c\u0627\u062d \u0628\u0645\u0634\u0627\u0631\u0643\u0629 \u0645\u0644\u0641 \u062c\u062f\u064a\u062f\!\n\u0623\u0639\u0636\u0627\u0621 \u0627\u062e\u0631\u0648\u0646 \u064a\u0633\u062a\u0637\u064a\u0639\u0648\u0646 \u0627\u0644\u0627\u0646\u0636\u0645\u0627\u0645 \u0627\u0644\u0627\u0646 wizard.filesharing.title\=\u0645\u0634\u0627\u0631\u0643\u0629 \u0627\u0644\u0645\u0644\u0641
-##wizard.filesharing.title=Filesharing
+##wizard.invite.selectlocaldirectory=Please select local target directory for the files
 wizard.key=\u0635
 wizard.loadinvitation.addtofriends=\u0625\u0636\u0627\u0641\u0629  {0} \u0625\u0644\u0649 \u0627\u0644\u0627\u0635\u062f\u0642\u0627\u0621
 wizard.loadinvitation.choosefile=\u0627\u062e\u062a\u0631 \u0645\u0644\u0641 \u0627\u0644\u062f\u0639\u0648\u0629
@@ -1054,20 +1047,14 @@ wizard.loadinvitation.selectfile=\u0627\u0644\u0631\u062c\u0627\u0621 \u0627\u06
 wizard.loadinvitation.title=\u062d\u0645\u0644 \u062f\u0639\u0648\u0629
 wizard.name=\u0645\u0639\u0627\u0644\u062c \u0627\u0644\u062a\u0643\u0648\u064a\u0646
 wizard.pfwizard.title=\u0645\u0639\u0627\u0644\u062c \u0627\u0644\u062a\u0643\u0648\u064a\u0646
+##wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
+##wizard.project_panel.select=Please select the project directory
 wizard.projectname.choose=\u0623\u062e\u062a\u0631 \u0627\u0633\u0645 \u0627\u0644\u0645\u0634\u0631\u0648\u0639
 wizard.projectname.entername=\u0623\u062f\u062e\u0644 \u0627\u0633\u0645 \u0645\u0634\u0631\u0648\u0639\u0643
 wizard.projectname.title=\u062d\u0645\u0644 \u062f\u0639\u0648\u0629
-wizard.projectsync.projectsyncsuccess=\u0644\u0642\u062f \u0642\u0645\u062a \u0628\u0646\u062c\u0627\u062d \u0628\u062a\u0643\u0648\u064a\u0646 \u0645\u0632\u0627\u0645\u0646\u0629 \u0645\u0634\u0631\u0648\u0639 \!\n\u064a\u0633\u062a\u0637\u064a\u0639 \u0627\u0644\u0627\u0646 \u0627\u0639\u0636\u0627\u0621 \u0627\u0644\u0645\u0634\u0631\u0648\u0639 \u0627\u0644\u0627\u062e\u0631\u064a\u0646 \u0627\u0644\u0627\u0646\u0636\u0645\u0627\u0645
-wizard.projectsync.selectdirectory=\u0627\u0644\u0631\u062c\u0627\u0621 \u0627\u062e\u062a\u064a\u0627\u0631 \u0627\u0644\u0645\u0633\u0627\u0631 \u0627\u0644\u0645\u0648\u062c\u0648\u062f\u0629 \u0641\u064a\u0647 \u0645\u0644\u0641\u0627\u062a \u0645\u0634\u0631\u0648\u0639\u0643
-wizard.projectsync.selectlocaldirectory=\u0627\u0644\u0631\u062c\u0627\u0621 \u0627\u062e\u062a\u064a\u0627\u0631 \u0645\u0633\u0627\u0631 \u0645\u062d\u0644\u064a \u0644\u0645\u0644\u0641\u0627\u062a \u0627\u0644\u0645\u0634\u0631\u0648\u0639
-wizard.projectsync.setupsync=\u062a\u0643\u0648\u064a\u0646 \u0645\u0632\u0627\u0645\u0646\u0629 \u0645\u0634\u0631\u0648\u0639
-wizard.projectsync.successjoin=\u0644\u0642\u062f \u0642\u0645\u062a \u0628\u0646\u062c\u0627\u062d \u0628\u0627\u0644\u0627\u0646\u0636\u0645\u0627\u0645 \u0627\u0644\u0649 \u0627\u0644\u0645\u0634\u0631\u0648\u0639\!
-wizard.projectsync.takepartsync=\u062e\u0630 \u062d\u064a\u0632\u0627 \u0645\u0646 \u0627\u0644\u0645\u0632\u0627\u0645\u0646\u0629
-wizard.projectsync.title=\u0645\u0632\u0627\u0645\u0646\u0629 \u0627\u0644\u0645\u0634\u0631\u0648\u0639
-wizard.sendinvitations.additionaltext=\u0645\u0639\u0644\u0648\u0645\u0627\u062a \u0625\u0636\u0627\u0641\u064a\u0629
 wizard.sendinvitations.invitationtext=\u0623\u062f\u062e\u0644 \u0631\u0633\u0627\u0644\u0629 \u0644\u0644\u0645\u062a\u0644\u0642\u064a
 wizard.sendinvitations.invitationtextsample=
-wizard.sendinvitations.joinsync=\u0645\u0644\u0641\u0627\u062a \u0627\u0644\u062f\u0639\u0648\u0629 \u062a\u062a\u0637\u0644\u0628 \u0627\u0644\u0627\u0646\u0636\u0645\u0627\u0645 \u0627\u0644\u0649 \u0645\u0631\u0622\u0629.
+##wizard.sendinvitations.join=Invitation files are required to join a folder.
 wizard.sendinvitations.neveruntrusted=\u0644\u0627\u062a\u0642\u0645 \u0628\u0627\u0631\u0633\u0627\u0644 \u0645\u0644\u0641\u0627\u062a \u062f\u0639\u0648\u0629 \u0644\u0627\u0634\u062e\u0627\u0635 \u063a\u064a\u0631 \u0645\u0648\u062b\u0648\u0642\u064a\u0646 .
 wizard.sendinvitations.offline=\u063a\u064a\u0631 \u0645\u062a\u0635\u0644
 wizard.sendinvitations.overpf=\u0639\u0628\u0631 PowerFolder \u0627\u0644\u0627\u0646
@@ -1082,15 +1069,12 @@ wizard.setupdns.enterdns=\u0623\u062f\u062e\u0644  (\u062f\u064a\u0646\u0627\u06
 wizard.setupdns.improvesread=\u0627\u0646\u0647\u0627 \u062a\u0627\u0643\u062f \u0627\u0645\u0643\u0627\u0646\u064a\u062a\u0643 . \u0628\u0627\u064a \u062d\u0627\u0644 \u0627\u0646\u0647 \u0644\u064a\u0633 \u0645\u0637\u0644\u0648\u0628\u0627
 wizard.setupdns.nodnssetup=\u0644\u0645 \u062a\u0643\u0648\u0646  (\u062f\u064a\u0646\u0627\u0645\u064a\u0643\u064a) dns \u0639\u0646\u0648\u0627\u0646 \u0628\u0639\u062f \!
 wizard.setupdns.title=\u062a\u0643\u0648\u064a\u0646  (\u062f\u064a\u0646\u0627\u0645\u064a\u0643\u064a) dns
+##wizard.setupdns.validate=Validate 
 wizard.setupsuccess=\u062a\u0645 \u0627\u0644\u062a\u0643\u0648\u064a\u0646 \u0628\u0646\u062c\u0627\u062d
-wizard.syncpcspanel.folderjoinsuccess=\u0644\u0642\u062f \u0642\u0645\u062a \u0628\u0646\u062c\u0627\u062d \u0628\u0627\u0644\u0627\u0646\u0636\u0645\u0627\u0645 \u0627\u0644\u0649 \u0645\u0631\u0622\u0629 \u0645\u062c\u0644\u062f\!\n
+##wizard.successjoin=You have successfully joined the folder\!
 wizard.syncpcspanel.foldersyncsuccess=\u0644\u0642\u062f \u0642\u0645\u062a \u0628\u0646\u062c\u0627\u062d \u0628\u062a\u0643\u0648\u064a\u0646 \u0645\u0631\u0622\u0629 \u0645\u062c\u0644\u062f \!\n
 wizard.syncpcspanel.pcsjoin=\u062d\u0648\u0627\u0633\u0628 \u0627\u062e\u0631\u0649 \u062a\u0633\u062a\u0637\u064a\u0639 \u0627\u0644\u0627\u0646 \u0627\u0644\u0627\u0646\u0636\u0645\u0627\u0645 \u0627\u0644\u0649 \u0647\u0630\u0627 \u0627\u0644\u0645\u062c\u0644\u062f
 wizard.syncpcspanel.select=\u0627\u0644\u0631\u062c\u0627\u0621 \u0627\u062e\u062a\u064a\u0627\u0631 \u0627\u0644\u0645\u0633\u0627\u0631 \u062d\u064a\u062b \u064a\u062c\u0628 \u0627\u0646 \u062a\u0643\u0648\u0646 \u0627\u0644\u0645\u0631\u0622\u0629
-wizard.syncpcspanel.selecttarget=\u0627\u0644\u0631\u062c\u0627\u0621 \u0627\u062e\u062a\u064a\u0627\u0631 \u0647\u062f\u0641 \u0645\u0633\u0627\u0631 \u0645\u062d\u0644\u064a
-wizard.syncpcspanel.setup=\u062a\u0634\u0643\u064a\u0644 \u0645\u0631\u0622\u0629 \u062c\u062f\u064a\u062f\u0629
-wizard.syncpcspanel.takepart=\u062e\u0630 \u062d\u064a\u0632\u0627 \u0645\u0646 \u0627\u0644\u0645\u0631\u0622\u0629
-wizard.syncpcspanel.title=\u0645\u0631\u0622\u0629
 wizard.webservice.enteraccount=\u0627\u0644\u0631\u062c\u0627\u0621 \u0625\u062f\u062e\u0627\u0644 \u0645\u0639\u0644\u0648\u0645\u0627\u062a \u062d\u0633\u0627\u0628\u0643 \u0644\u0644\u062f\u062e\u0648\u0644 \u0627\u0644\u0649 \u0648\u062d\u062f\u0629 \u0627\u0644\u062a\u062e\u0632\u064a\u0646 \u0639\u0628\u0631 \u0627\u0644\u0627\u0646\u062a\u0631\u0646\u062a
 wizard.webservice.learnmore=\u0645\u0627\u0647\u064a \u0648\u062d\u062f\u0629 \u0627\u0644\u062a\u062e\u0632\u064a\u0646 \u0639\u0628\u0631 \u0627\u0644\u0627\u0646\u062a\u0631\u0646\u062a \u0627\u0644\u062e\u0627\u0635\u0629 \u0628 PowerFolder?
 wizard.webservice.login=\u062f\u062e\u0648\u0644 \u0648\u062d\u062f\u0629 \u0627\u0644\u062a\u062e\u0632\u064a\u0646 \u0639\u0628\u0631 \u0627\u0644\u0627\u0646\u062a\u0631\u0646\u062a
@@ -1099,9 +1083,10 @@ wizard.webservice.mirrorsetup=\u0639\u0645\u0644 \u0646\u0633\u062e\u0629 \u0627
 wizard.webservice.password=\u0643\u0644\u0645\u0629 \u0627\u0644\u0633\u0631
 wizard.webservice.register=\u062a\u0633\u062c\u064a\u0644 \u062d\u0633\u0627\u0628 \u062c\u062f\u064a\u062f
 wizard.webservice.username=\u0627\u0644\u0628\u0631\u064a\u062f \u0627\u0644\u0627\u0644\u0643\u062a\u0631\u0648\u0646\u064a
-wizard.whattodo.bordertext=\u0627\u062e\u062a\u0631 \u062d\u0631\u0643\u062a\u0643
-wizard.whattodo.filesharing=\u0634\u0627\u0631\u0643 \u0627\u0644\u0645\u0644\u0641\u0627\u062a
+##wizard.whattodo.backup_folder=Backup a folder
+##wizard.whattodo.custom_sync=Share a folder (customized)
+##wizard.whattodo.load_invite=Open invitation file
+##wizard.whattodo.mirror_folder=Mirror a folder
 wizard.whattodo.openonlinedocumentation=\u0627\u0641\u062a\u062d \u0645\u0644\u0641 \u0639\u0628\u0631 \u0627\u0644\u062e\u0637
 wizard.whattodo.projectwork=\u0645\u0634\u0631\u0648\u0639 \u0627\u0644\u0645\u0632\u0627\u0645\u0646\u0629
-wizard.whattodo.syncpcs=\u0645\u0631\u0622\u0629
 wizard.whattodo.title=\u0645\u0627\u0644\u0630\u064a \u062a\u0631\u064a\u062f \u0623\u0646 \u062a\u0641\u0639\u0644\u0647 ?
