--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -374,7 +374,7 @@ folderpanel.hometab.title=\u30db\u30fc\u30e0
 folderpanel.hometab.total_size=\u5408\u8a08\u30b5\u30a4\u30ba
 folderpanel.hometab.working.description=\u30d5\u30a9\u30eb\u30c0\u79fb\u52d5\u4e2d
 folderpanel.hometab.working.title=\u30d5\u30a9\u30eb\u30c0\u79fb\u52d5
-folderpanel.settingstab.add_a_pattern.example=\u5165\u529b\u4f8b \*.jpg
+folderpanel.settingstab.add_a_pattern.example=\u5165\u529b\u4f8b *.jpg
 folderpanel.settingstab.add_a_pattern.text=\u540c\u671f\u5bfe\u8c61\u304b\u3089\u30d5\u30a1\u30a4\u30eb\u3092\u9664\u5916\u3059\u308b\u305f\u3081\u306e\u30d1\u30bf\u30fc\u30f3\u3092\u5165\u529b
 folderpanel.settingstab.add_a_pattern.title=\u7121\u8996\u5bfe\u8c61\u30d1\u30bf\u30fc\u30f3\u306e\u8ffd\u52a0
 folderpanel.settingstab.addbutton.description=\u540c\u671f\u5bfe\u8c61\u304b\u3089\u30d5\u30a1\u30a4\u30eb\u3092\u9664\u5916\u3059\u308b\u305f\u3081\u306e\u30d1\u30bf\u30fc\u30f3\u3092\u8ffd\u52a0
@@ -498,10 +498,6 @@ imagefileinfo.unknown=\u4e0d\u660e
 infoside.title=\u60c5\u5831
 
 invitationfiles.description=PowerFolder \u62db\u5f85\u72b6\u30d5\u30a1\u30a4\u30eb(.invitation)
-
-join_by_invitation.description=\u30c7\u30a3\u30b9\u30af\u304b\u3089\u62db\u5f85\u72b6\u30d5\u30a1\u30a4\u30eb(.Invitation)\u3092\u8aad\u307f\u8fbc\u307f\u3001\u62db\u5f85\u72b6\u3092\u901a\u3058\u3066\u30d5\u30a9\u30eb\u30c0\u306b\u53c2\u52a0
-join_by_invitation.key=I
-join_by_invitation.name=\u62db\u5f85\u72b6\u8aad\u8fbc\u307f(I)
 
 joinfolder.already_joined_text=\u3059\u3067\u306b {0} \u30d5\u30a9\u30eb\u30c0\u306e\u30e1\u30f3\u30d0\u30fc\u306b\u306a\u3063\u3066\u3044\u307e\u3059\u3002
 joinfolder.already_joined_title={0} \u306b\u53c2\u52a0\u4e0d\u53ef
@@ -1018,6 +1014,9 @@ user.dir.videos=\u52d5\u753b
 
 winutils.shortcut.description=\u3053\u306e\u30b7\u30e7\u30fc\u30c8\u30ab\u30c3\u30c8\u306f PowerFolder \u306b\u3088\u3063\u3066\u3053\u3053\u306b\u7f6e\u304b\u308c\u307e\u3057\u305f
 
+##wizard.backup_panel.folder_backup_success=You successfully set up a folder backup\!\n
+##wizard.backup_panel.pcsjoin=Other computers can join this folder now
+##wizard.backup_panel.select=Please select the directory which should be backed up
 wizard.basicsetup.enternick=\u30cb\u30c3\u30af\u30cd\u30fc\u30e0\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
 wizard.basicsetup.lanonly=LAN \u5185\u9650\u5b9a
 wizard.basicsetup.networking=\u63a5\u7d9a\u5148
@@ -1038,14 +1037,8 @@ wizard.control.help.description=\u30aa\u30f3\u30e9\u30a4\u30f3\u30d8\u30eb\u30d7
 wizard.control.next=\u6b21\u3078 >
 wizard.control.next.description=\u6b21\u306e\u6bb5\u968e\u306b\u9032\u3080
 wizard.description=\u30a6\u30a3\u30b6\u30fc\u30c9\u3092\u958b\u304f
-wizard.filesharing.browse=\u30d1\u30d6\u30ea\u30c3\u30af\u30d5\u30a9\u30eb\u30c0\u3092\u53c2\u7167\u3059\u308b
-wizard.filesharing.browseinfo=\u30d1\u30d6\u30ea\u30c3\u30af\u30d5\u30a9\u30eb\u30c0\uff08\u7070\u8272\uff09\u5185\u3092\u95b2\u89a7\u3059\u308b\u306b\u306f\u3001\n\u5de6\u5074\u306b\u3042\u308b\u64cd\u4f5c\u30c4\u30ea\u30fc\u3092\u4f7f\u7528\u3057\u3066\u304f\u3060\u3055\u3044\u3002\n\u30d5\u30a9\u30eb\u30c0\u5185\u306e\u30d5\u30a1\u30a4\u30eb\u306f\u53f3\u5074\u306b\u8868\u793a\u3055\u308c\u307e\u3059\u3002
-wizard.filesharing.folderjoinsuccess=\u30d5\u30a9\u30eb\u30c0\u3078\u306e\u53c2\u52a0\u306b\u6210\u529f\u3057\u307e\u3057\u305f
-wizard.filesharing.loadinvitation=\u62db\u5f85\u72b6\u3092\u901a\u3058\u3066\u30d5\u30a9\u30eb\u30c0\u3078\u53c2\u52a0\u3059\u308b
-wizard.filesharing.selecttarget=\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u5148\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044
-wizard.filesharing.share=\u65b0\u898f\u30d5\u30a9\u30eb\u30c0\u3092 \u5171\u6709\u3059\u308b\uff0f\u958b\u304f
 wizard.filesharing.sharedsuccess=\u65b0\u898f\u30d5\u30a9\u30eb\u30c0\u306e\u5171\u6709\u306b\u6210\u529f\u3057\u307e\u3057\u305f\uff01\n\u4ed6\u30e6\u30fc\u30b6\u30fc\u306e\u53c2\u52a0\u304c\u53ef\u80fd\u306b\u306a\u308a\u307e\u3057\u305f\u3002
-wizard.filesharing.title=\u30d5\u30a1\u30a4\u30eb\u306e\u5171\u6709
+##wizard.invite.selectlocaldirectory=Please select local target directory for the files
 wizard.key=W
 wizard.loadinvitation.addtofriends={0} \u3092\u53cb\u4eba\u30ea\u30b9\u30c8\u306b\u8ffd\u52a0
 wizard.loadinvitation.choosefile=\u62db\u5f85\u72b6\u30d5\u30a1\u30a4\u30eb\u306e\u9078\u629e
@@ -1054,20 +1047,14 @@ wizard.loadinvitation.selectfile=\u62db\u5f85\u72b6\u30d5\u30a1\u30a4\u30eb(.inv
 wizard.loadinvitation.title=\u62db\u5f85\u72b6\u306e\u8aad\u307f\u8fbc\u307f
 wizard.name=\u30a6\u30a3\u30b6\u30fc\u30c9
 wizard.pfwizard.title=\u30a6\u30a3\u30b6\u30fc\u30c9
+##wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
+##wizard.project_panel.select=Please select the project directory
 wizard.projectname.choose=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u540d\u306e\u9078\u629e
 wizard.projectname.entername=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u540d\u524d\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
 wizard.projectname.title=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u540d\u306e\u9078\u629e
-wizard.projectsync.projectsyncsuccess=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u540c\u671f\u306f\u6b63\u5e38\u306b\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u3055\u308c\u307e\u3057\u305f\uff01\n\u4ed6\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30e1\u30f3\u30d0\u30fc\u306e\u53c2\u52a0\u304c\u53ef\u80fd\u306b\u306a\u308a\u307e\u3057\u305f\u3002
-wizard.projectsync.selectdirectory=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u5bfe\u8c61\u30d5\u30a1\u30a4\u30eb\u304c\u3042\u308b\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044
-wizard.projectsync.selectlocaldirectory=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u5bfe\u8c61\u30d5\u30a1\u30a4\u30eb\u306e\u30ed\u30fc\u30ab\u30eb\u30b3\u30d4\u30fc\u5148\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002
-wizard.projectsync.setupsync=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u540c\u671f\u3092\u65b0\u898f\u306b\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u3059\u308b
-wizard.projectsync.successjoin=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3078\u6b63\u5e38\u306b\u53c2\u52a0\u3067\u304d\u307e\u3057\u305f\uff01
-wizard.projectsync.takepartsync=\u65e2\u5b58\u306e\u540c\u671f\u306b\u53c2\u52a0\u3059\u308b
-wizard.projectsync.title=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u540c\u671f
-wizard.sendinvitations.additionaltext=\u5099\u8003
 wizard.sendinvitations.invitationtext=\u53d7\u3051\u53d6\u308a\u4eba\u3078\u306e\u30e1\u30c3\u30bb\u30fc\u30b8\u306e\u5165\u529b
 ##wizard.sendinvitations.invitationtextsample=
-wizard.sendinvitations.joinsync=\u30df\u30e9\u30fc\u3078\u306e\u53c2\u52a0\u306b\u306f\u62db\u5f85\u72b6\u30d5\u30a1\u30a4\u30eb\u304c\u5fc5\u8981\u3067\u3059\u3002
+##wizard.sendinvitations.join=Invitation files are required to join a folder.
 wizard.sendinvitations.neveruntrusted=\u4fe1\u983c\u3067\u304d\u306a\u3044\u4eba\u306b\u306f\u6c7a\u3057\u3066\u62db\u5f85\u72b6\u3092\u6e21\u3055\u306a\u3044\u3067\u304f\u3060\u3055\u3044\u3002
 wizard.sendinvitations.offline=\u672a\u63a5\u7d9a
 wizard.sendinvitations.overpf=PowerFolder \u3092\u901a\u3058\u3066\u76f4\u3061\u306b
@@ -1082,15 +1069,12 @@ wizard.setupdns.enterdns=\u3042\u306a\u305f\u306e\uff08\u52d5\u7684\uff09DNS \u3
 wizard.setupdns.improvesread=\u5fc5\u9808\u5165\u529b\u9805\u76ee\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u304c\u3001\u5916\u90e8\u304b\u3089\u306e\u53c2\u7167\u6027\u304c\u5411\u4e0a\u3057\u307e\u3059\u3002
 wizard.setupdns.nodnssetup=\u307e\u3060\uff08\u52d5\u7684\uff09DNS \u30a2\u30c9\u30ec\u30b9 \u304c\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u3055\u308c\u3066\u3044\u307e\u305b\u3093\uff01
 wizard.setupdns.title=\uff08\u52d5\u7684\uff09DNS \u306e\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7
+##wizard.setupdns.validate=Validate 
 wizard.setupsuccess=\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u6210\u529f
-wizard.syncpcspanel.folderjoinsuccess=\u30d5\u30a9\u30eb\u30c0\u306e\u30df\u30e9\u30fc\u306e\u53c2\u52a0\u306b\u6210\u529f\u3057\u307e\u3057\u305f\uff01\n
+##wizard.successjoin=You have successfully joined the folder\!
 wizard.syncpcspanel.foldersyncsuccess=\u30d5\u30a9\u30eb\u30c0\u306e\u30df\u30e9\u30fc\u306e\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u306b\u6210\u529f\u3057\u307e\u3057\u305f\uff01\n
 wizard.syncpcspanel.pcsjoin=\u4ed6 PC \u3092\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u306b\u53c2\u52a0\u3055\u305b\u308b\u3053\u3068\u304c\u3067\u304d\u308b\u72b6\u614b\u306b\u306a\u308a\u307e\u3057\u305f\u3002
 wizard.syncpcspanel.select=\u30df\u30e9\u30fc\u3059\u308b\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044
-wizard.syncpcspanel.selecttarget=\u30ed\u30fc\u30ab\u30eb\u306e\u5bfe\u8c61\u5148\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044
-wizard.syncpcspanel.setup=\u65b0\u898f\u30df\u30e9\u30fc\u306e\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7
-wizard.syncpcspanel.takepart=\u30df\u30e9\u30fc\u306b\u53c2\u52a0
-wizard.syncpcspanel.title=\u30df\u30e9\u30fc
 wizard.webservice.enteraccount=Web\u30b5\u30fc\u30d3\u30b9\u3078\u306e\u30ed\u30b0\u30a4\u30f3\u7528\u30a2\u30ab\u30a6\u30f3\u30c8\u30c7\u30fc\u30bf\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
 wizard.webservice.learnmore=PowerFolder Web\u30b5\u30fc\u30d3\u30b9\u3068\u306f\uff1f
 wizard.webservice.login=\u30aa\u30f3\u30e9\u30a4\u30f3\u30b9\u30c8\u30ec\u30fc\u30b8 \u30ed\u30b0\u30a4\u30f3
@@ -1099,9 +1083,10 @@ wizard.webservice.mirrorsetup=Web\u30b5\u30fc\u30d3\u30b9 \u306b\u3088\u308b\u30
 wizard.webservice.password=\u30d1\u30b9\u30ef\u30fc\u30c9
 wizard.webservice.register=\u65b0\u898f\u30a2\u30ab\u30a6\u30f3\u30c8\u767b\u9332
 wizard.webservice.username=Email
-wizard.whattodo.bordertext=\u4f5c\u696d\u9078\u629e
-wizard.whattodo.filesharing=\u30d5\u30a1\u30a4\u30eb\u306e\u5171\u6709
+##wizard.whattodo.backup_folder=Backup a folder
+##wizard.whattodo.custom_sync=Share a folder (customized)
+##wizard.whattodo.load_invite=Open invitation file
+##wizard.whattodo.mirror_folder=Mirror a folder
 wizard.whattodo.openonlinedocumentation=\u30aa\u30f3\u30e9\u30a4\u30f3\u8aac\u660e\u3092\u958b\u304f
 wizard.whattodo.projectwork=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u540c\u671f
-wizard.whattodo.syncpcs=\u30df\u30e9\u30fc
 wizard.whattodo.title=\u4f55\u3092\u884c\u3044\u307e\u3059\u304b\uff1f
