--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -1014,6 +1014,9 @@ user.dir.videos=\u89c6\u9891
 
 winutils.shortcut.description=\u6b64\u5feb\u6377\u65b9\u5f0f\u7531PowerFolder\u653e\u7f6e\u4e8e\u6b64
 
+##wizard.backup_panel.folder_backup_success=You successfully set up a folder backup\!\n
+##wizard.backup_panel.pcsjoin=Other computers can join this folder now
+##wizard.backup_panel.select=Please select the directory which should be backed up
 wizard.basicsetup.enternick=\u8bf7\u8f93\u5165\u4f60\u7684\u6635\u79f0
 wizard.basicsetup.lanonly=\u4ec5\u7528\u5c40\u57df\u7f51
 wizard.basicsetup.networking=\u8fde\u63a5\u65b9\u5f0f
@@ -1035,6 +1038,7 @@ wizard.control.next=\u4e0b\u4e00\u6b65 >
 wizard.control.next.description=\u5230\u5411\u5bfc\u7684\u4e0b\u4e00\u6b65
 wizard.description=\u5411\u5bfc
 wizard.filesharing.sharedsuccess=\u5df2\u7ecf\u6210\u529f\u5171\u4eab\u65b0\u6587\u4ef6\u5939\uff01\r\n\u73b0\u5728\u53ef\u4ee5\u52a0\u5165\u5176\u4ed6\u7528\u6237
+##wizard.invite.selectlocaldirectory=Please select local target directory for the files
 wizard.key=w
 wizard.loadinvitation.addtofriends=\u6dfb\u52a0 {0} \u4e3a\u597d\u53cb
 wizard.loadinvitation.choosefile=\u9009\u62e9\u9080\u8bf7\u6587\u4ef6
@@ -1043,11 +1047,14 @@ wizard.loadinvitation.selectfile=\u8bf7\u9009\u62e9\u9080\u8bf7\u6587\u4ef6
 wizard.loadinvitation.title=\u8f7d\u5165\u9080\u8bf7
 wizard.name=\u5411\u5bfc
 wizard.pfwizard.title=\u5411\u5bfc
+##wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
+##wizard.project_panel.select=Please select the project directory
 wizard.projectname.choose=\u9009\u62e9\u9879\u76ee\u540d\u79f0
 wizard.projectname.entername=\u8f93\u5165\u4f60\u7684\u9879\u76ee\u540d\u79f0
 wizard.projectname.title=\u8f7d\u5165\u9080\u8bf7
 wizard.sendinvitations.invitationtext=\u8f93\u5165\u4e00\u6761\u6d88\u606f\u7ed9\u63a5\u53d7\u8005
 ##wizard.sendinvitations.invitationtextsample=
+##wizard.sendinvitations.join=Invitation files are required to join a folder.
 wizard.sendinvitations.neveruntrusted=\u4ece\u4e0d\u7ed9\u4e0d\u4fe1\u4efb\u7684\u4eba\u53d1\u9001\u9080\u8bf7
 wizard.sendinvitations.offline=\u672a\u8fde\u63a5
 wizard.sendinvitations.overpf=\u9a6c\u4e0a\u4f7f\u7528PowerFolder
@@ -1062,7 +1069,9 @@ wizard.setupdns.enterdns=\u8f93\u5165\u4f60\u7684\u52a8\u6001DNS
 wizard.setupdns.improvesread=\u8fd9\u4f1a\u6539\u5584\u4f60\u7684\u8fde\u63a5\u6027\u80fd\u3002\u4f46\u5e76\u4e0d\u662f\u5fc5\u9700\u7684\u3002
 wizard.setupdns.nodnssetup=\u4f60\u8fd8\u6ca1\u6709\u8bbe\u7f6e\u52a8\u6001DNS\u5730\u5740\uff01
 wizard.setupdns.title=\u8bbe\u7f6e\u52a8\u6001DNS
+##wizard.setupdns.validate=Validate 
 wizard.setupsuccess=\u8bbe\u7f6e\u6210\u529f
+##wizard.successjoin=You have successfully joined the folder\!
 wizard.syncpcspanel.foldersyncsuccess=\u4f60\u5df2\u7ecf\u6210\u529f\u8bbe\u7f6e\u6587\u4ef6\u5939\u955c\u50cf\!\n
 wizard.syncpcspanel.pcsjoin=\u5176\u5b83\u7535\u8111\u5df2\u7ecf\u53ef\u4ee5\u52a0\u5165\u8be5\u6587\u4ef6\u5939\u4e86
 wizard.syncpcspanel.select=\u8bf7\u9009\u62e9\u9700\u8981\u955c\u50cf\u7684\u6587\u4ef6\u5939
@@ -1074,6 +1083,10 @@ wizard.webservice.mirrorsetup=\u7528\u7f51\u7edc\u670d\u52a1\u5907\u4efd\u6587\u
 wizard.webservice.password=\u5bc6\u7801
 wizard.webservice.register=\u6ce8\u518c\u65b0\u8d26\u53f7
 wizard.webservice.username=Email
+##wizard.whattodo.backup_folder=Backup a folder
+##wizard.whattodo.custom_sync=Share a folder (customized)
+##wizard.whattodo.load_invite=Open invitation file
+##wizard.whattodo.mirror_folder=Mirror a folder
 wizard.whattodo.openonlinedocumentation=\u6253\u5f00\u5728\u7ebf\u6587\u6863
 wizard.whattodo.projectwork=\u540c\u6b65\u9879\u76ee
 wizard.whattodo.title=\u4f60\u60f3\u505a\u4ec0\u4e48\uff1f
